--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/swing-layout-1.0.3.jar"/>
 	<classpathentry kind="lib" path="lib/AbsoluteLayout.jar"/>
+	<classpathentry kind="lib" path="lib/saxon-9.x.jar"/>
+	<classpathentry kind="lib" path="lib/saxon-dom-9.x.jar"/>
+	<classpathentry kind="lib" path="lib/saxon-xpath-9.x.jar"/>
+	<classpathentry kind="lib" path="lib/saxon-xqj-9.x.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
